[JSC] incorrectly reports SyntaxError when destructuring `let` https://bugs.webkit.org/show_bug.cgi?id=157974

Reviewed by Darin Adler.

Raise lexical error later to allow destructuring let

* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseDestructuringPattern):

Canonical link: https://commits.webkit.org/283217@main